--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,13 @@
-<a href='/addreport'>Add Report</a>
-<br>
-<a href='/viewreport'>View Report</a>
+{% extends "layout.html" %}
+{% block content %}
+	<div class="jumbotron text-center">
+	    <h1>MediChain</h1>
+	    <p>Store your medical history reliably</p>
+	    <br>
+	     <div class="btn-group-vertical">
+		  	<a href="/addreport" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Add Report</a>
+	  		<a href="/viewreport" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">View Report</a>
+		</div>
+	 </div>
+
+{% endblock content %}
