--- a/templates/viewreport.html
+++ b/templates/viewreport.html
@@ -1,60 +1,36 @@
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
-
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
-</style>
-</head>
-<body>
-
-
-{% from "_formhelpers.html" import render_field %}
-<form method=post>
-  <dl>
-    {{ render_field(form.username) }}
-  </dl>
-  <p><input type=submit value=Register>
-</form>
-
-<br>
-<br>
-{% if data %}
-<table>
-    <tr>
-        <th>user</th>
-        <th>Report</th>
-        
-      </tr>
-  
-    {% for report in data %}
-      {% if report %}
-        {% for r in report %}
+{% extends "layout.html" %}
+{% block content %}
+    {% from "_formhelpers.html" import render_field %}
+    <form method=post>
+      <dl>
+        {{ render_field(form.username) }}
+      </dl>
+      <p><input type=submit class="btn btn-primary btn-lg active" value=View>
+    </form>
+    
+    <br>
+    <br>
+    {% if data %}
+    <table class="table table-bordered">
         <tr>
-          {% for key, value in r.items() %}
-            <td>{{ value }}</td>
-          {% endfor %}
-        </tr>
-        {% endfor %}
-      {% endif %}
-    {% endfor %}
+            <th>user</th>
+            <th>Report</th>
+            
+          </tr>
       
-  
-</table>
-{% endif %}
-
-</body>
-</html>
+        {% for report in data %}
+          {% if report %}
+            {% for r in report %}
+            <tr>
+              {% for key, value in r.items() %}
+                <td>{{ value }}</td>
+              {% endfor %}
+            </tr>
+            {% endfor %}
+          {% endif %}
+        {% endfor %}
+          
+      
+    </table>
+    {% endif %}
+{% endblock content %}
