Add login logout fucntionality.

--- a/templates/viewreport.html
+++ b/templates/viewreport.html
@@ -13,7 +13,8 @@
     {% if data %}
     <table class="table table-bordered">
         <tr>
-            <th>user</th>
+            <th>Patient</th>
+            <th>Doctor</th>
             <th>Report</th>
             
           </tr>
