--- a/templates/layout.html
+++ b/templates/layout.html
@@ -37,6 +37,18 @@
             </div>
           </div>
         </div>
+
+        <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+          <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                {% if user != "" %}
+                  <a class="nav-link" href="/logout">{{ user }}</a>
+                  {% endif %}
+              </li>
+              
+          </ul>
+      </div>
+
       </nav>
     </header>
 	<main role="main" class="container">
